...
        app:layout_constraintBottom_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="141dp"
        android:layout_height="200dp"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/eab_logocnome"
...
        android:text="@string/cadastre_se"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_login_form"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <RelativeLayout
        android:id="@+id/email_login_form"
        android:layout_width="311dp"
...
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout">

            <EditText
                android:id="@+id/campoEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/campo_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />
...
            android:layout_below="@+id/textInputLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textInputLayout2">

            <EditText
                android:id="@+id/campoSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/campo_senha"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/acao_login_curta"
                android:imeOptions="actionUnspecified"
...
            android:layout_marginStart="30dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acao_login"
            android:textStyle="bold"
            android:layout_marginRight="27dp"
            android:layout_marginEnd="27dp"
...
