<resources>
    <string name="app_name">ExpoAgro Brasil</string>

    <!-- Strings related to login -->
    <string name="campo_email">Email</string>
    <string name="campo_senha">Senha</string>
    <string name="campo_nome">Nome</string>
    <string name="campo_telefone">Telefone</string>
    <string name="campo_cidade">Cidade</string>
    <string name="campo_repetirSenha">Repetir Senha</string>
    <string name="campo_categoria">Categoria</string>
    <string name="campo_frequencia">Frequência</string>
    <string name="campo_valor">Valor</string>
    <string name="campo_descricao">Descrição</string>
    <string name="campo_observacao">Observação</string>
    <string name="campo_comentario">Seu comentário</string>

    <string name="acao_login">Entrar</string>
    <string name="acao_voltar">Voltar</string>
    <string name="acao_login_curta">Entrar</string>
    <string name="acao_cadastrar">Cadastrar</string>
    <string name="acao_cancelar">Cancelar</string>
    <string name="acao_alterar_senha">Alterar Senha</string>
    <string name="acao_editar">Editar Conta</string>
    <string name="acao_excluir">Excluir Conta</string>
    <string name="acao_salvar">Salvar</string>
    <string name="acao_comentar">Adicionar Comentário</string>

    <string name="msg_cadastro_sucesso">Cadastro realizado com sucesso</string>

    <string name="error_nome_invalido">Nome inválido</string>
    <string name="error_telefone_invalido">Formato: (XX) 9XXXX-XXXX</string>

    <string name="error_email_invalido">Endereço de email inválido</string>
    <string name="error_senha_invalida">Digite entre 6 e 15 caracteres</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="error_cidade_nao_selecionada">Selecione uma cidade</string>
    <string name="error_repetir_senha_invalida">As senhas não combinam! Verifique.</string>
    <string name="error_login">Não foi possível realizar o Login. Tente Novamente</string>
    <string name="error_valor_invalido">Preço Inválido</string>
    <string name="error_frequencia_nao_selecionada">Selecione a frequência do serviço</string>
    <string name="error_categoria_nao_selecionada">Selecione a categoria do produto</string>

    <string name="menu_perfil">Meu perfil</string>
    <string name="menu_novo_produto">Novo produto</string>
    <string name="menu_novo_servico">Novo serviço</string>
    <string name="menu_meus_anuncios">Meus anúncios</string>
    <string name="menu_arroba">"@" hoje</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_sair">Sair</string>

    <string name="bem_vindo">Bem vindo ao ExpoAgro Brasil!</string>
    <string name="fazer_login"><u>Fazer Login</u></string>

    <string name="cotacao_do_boi"><u>Cotação do Boi Gordo</u></string>

    <string name="ver_comentarios"><u>VER COMENTÁRIOS</u></string>
    <string name="cadastre_se">NÃO É CADASTRADO? <u>CADASTRE-SE</u></string>
    <string name="esqueceu_senha"><u>ESQUECEU SUA SENHA?</u></string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_visualizar_usuario"></string>
    <string name="title_activity_menu"></string>
    <string name="title_activity_">Activity</string>
    <string name="title_activity_visualizar_anunciante">VisualizarAnuncianteActivity</string>
    <string name="title_activity_comentarios">Comentários</string>
    <string name="title_activity_novo_comentario">Novo Comentário</string>
    <string name="title_activity_favoritos">Favoritos</string>

    <string name="title_activity_alterar_usuario">AlterarUsuarioActivity</string>
    <string name="title_activity_completar_cadastro">CompletarCadastroActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pick_image_intent_text">Selecione uma Foto:</string>

    <string-array name="categorias">
        <item>Selecione a Categoria...</item>
        <item>Animal</item>
        <item>Ferramenta</item>
        <item>Propriedade</item>
        <item>Maquinários</item>
        <item>Outros</item>
    </string-array>

    <string-array name="frequencias">
        <item>Selecione a Frequência...</item>
        <item>Por Dia</item>
        <item>Por Hora</item>
        <item>Por Semana</item>
        <item>Por Quinzena</item>
        <item>Outra</item>
    </string-array>

    <string name="sobre">
\n
        Nossa Equipe:
\n \n
Gerente de Projetos: Vanessa Lins \n
Testers: Vanessa Lins, Diego das Neves \n
Desenvolvedores: \n Fabrício Paes, João Bosco \n Alexandre Jorge, Samir Soares \n
Consultor Especializado: Robson Veras
\n\n
</string>>

</resources>