...
                android:id="@+id/alterarProduto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginLeft="64dp"
                android:layout_marginStart="64dp"
                android:layout_toLeftOf="@+id/excluirProduto"
                android:layout_toStartOf="@+id/excluirProduto"
                android:text="Alterar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textoComentarios"
...
